# rustploy

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  openapi.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql  0002_jobs.sql  0003_github.sql  0004_api_tokens_and_import.sql  0005_deployment_logs.sql  0006_auth_domains_services.sql  0007_compose_support.sql  0008_runtime_routing.sql  0009_app_env_vars.sql  0010_deployment_logs_cursor_index.sql  0011_dashboard_telemetry.sql
crates/server/src/: lib.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
docs/: README.md  api-contract.md  api.md  architecture.md  build-nextjs.md  caddy.md  contributing.md  deployment-state-machine.md  operations.md  product-requirements.md  release-engineering.md  roadmap.md  rustploy-manifest.md  security.md  status.md  tui.md  vision.md
docs/adr/: 0001-sqlite-default.md  0002-nextjs-auto-build-first.md  0003-managed-postgres-redis.md  0004-token-auth-and-scope-model.md  README.md
docs/examples/: README.md  rustploy-nextjs-npm.yaml  rustploy-nextjs-pnpm.yaml  rustploy-nextjs-yarn.yaml
docs/runbooks/: README.md  backup-and-restore.md  install-single-node.md  install-systemd.md  upgrade-single-node.md
docs/tasks/: TASK-001-project-bootstrap.md  TASK-002-control-plane-and-agent.md  TASK-003-reconciler-and-job-queue.md  TASK-004-github-app-integration.md  TASK-005-build-and-deploy-pipeline.md  TASK-006-ingress-and-certificates.md  TASK-007-web-dashboard-ui.md  TASK-008-observability-and-logs.md  TASK-009-self-hosted-packaging.md  TASK-010-auth-and-team-access.md  TASK-011-security-hardening.md  TASK-012-release-engineering.md  TASK-013-public-api-and-tokens.md  TASK-014-terminal-ui.md  TASK-015-nextjs-zero-config-builds.md  TASK-016-manifest-support.md  TASK-017-managed-dependencies.md
packaging/systemd/: rustploy-agent.service  rustploy-server.service
scripts/ci/: docs_guard.sh
