[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sysinfo = "0.29.11"
uuid.workspace = true
